--- a/index.css
+++ b/index.css
@@ -192,8 +192,8 @@ h1 {
 .screen {
   width: 17.6rem;
   background-color: var(--app-background);
-  border-radius: 34px;
-  border: 12px solid var(--white);
+  border-radius: 39px;
+  border: 13px solid var(--white);
   overflow: hidden;
   position: relative;
   box-shadow: 0.4rem 2rem 2.5rem hsla(207, 7%, 74%, 0.693);
@@ -203,8 +203,8 @@ h1 {
 .screen-top {
   position: absolute;
   margin: auto;
-  width: 55%;
-  height: 40px;
+  width: 56%;
+  height: 42px;
   background: var(--white);
   top: -20px;
   left: 50%;
@@ -217,8 +217,8 @@ h1 {
   display: flex;
   flex-direction: row;
   align-items: center;
-  padding: 34px 16px 15px 17px;
-  border-radius: 17px 17px 6px 6px;
+  padding: 36px 16px 15px 17px;
+  border-radius: 25px 25px 6px 6px;
   margin-bottom: 0.9rem;
   gap: 8px;
   box-shadow: 0px 4px 12px hsla(206, 7%, 79%, 0.861);
@@ -247,18 +247,21 @@ h1 {
   font-size: 0.8rem;
 }
 .status {
-  margin-top: 0.09rem;
+  margin-top: 0.17rem;
   font-size: 0.6rem;
   font-weight: 100;
   padding: 0.1rem;
   color: var(--pale-violet);
 }
 .avatar {
+  margin-left: 0.1rem;
+  margin-right: 0.1rem;
   border-radius: 50%;
   overflow: hidden;
   border: 2px var(--white);
-  width: 1.6rem;
-  height: 1.6rem;
+  width: 1.7rem;
+  height: 1.7rem;
+  aspect-ratio: 1;
   border: 1px solid var(--white);
 }
 .avatar img {
@@ -320,16 +323,16 @@ hr {
 input[type="text"] {
   background-color: var(--white);
   display: block;
-  padding: 1rem 1.4rem 0.8rem;
+  padding: 1rem 1.5rem 0.8rem;
   line-height: 1.3;
-  font-size: 0.63rem;
+  font-size: 0.67rem;
   height: 0.6rem;
   border-radius: 40px;
   border: none;
   margin: auto;
   margin-top: 0.5rem;
   color: var(--dd-violet);
-  width: 13.6rem;
+  width: 13.4rem;
   border-top: 1px solid rgb(255, 255, 255);
 }
 .input {
@@ -486,7 +489,7 @@ button:hover .greater-symbol {
     font-size: 12.4vw;
   }
   .screen {
-    transform: scaleX(0.99);
+    transform: scale(0.98);
   }
 }
 
