--- a/index.css
+++ b/index.css
@@ -217,16 +217,24 @@ h1 {
   display: flex;
   flex-direction: row;
   align-items: center;
-  padding: 36px 16px 15px 17px;
+  padding: 36px 16px 14px 18px;
   border-radius: 25px 25px 6px 6px;
   margin-bottom: 0.9rem;
-  gap: 8px;
+  gap: 7px;
   box-shadow: 0px 4px 12px hsla(206, 7%, 79%, 0.861);
 }
 .less-than {
   color: var(--white);
   font-weight: 700;
-  transform: scaleY(1.4) scaleX(0.66) scale(0.9);
+  transform: scaleY(1.4) scaleX(0.66) scale(0.9) translateY(-5%);
+}
+.less-than::after {
+  content: "<";
+  color: var(--white);
+  font-weight: 700;
+  transform: scaleY(1.4) scaleX(0.86) scale(0.9) scaleY(0.8) translateX(-130%);
+  position: absolute;
+  opacity: 0.8;
 }
 .three-dots {
   margin-left: auto;
@@ -245,6 +253,7 @@ h1 {
   padding: 0.1rem;
   justify-self: flex-start;
   font-size: 0.8rem;
+  letter-spacing: 0.3px;
 }
 .status {
   margin-top: 0.17rem;
@@ -255,7 +264,7 @@ h1 {
 }
 .avatar {
   margin-left: 0.1rem;
-  margin-right: 0.1rem;
+  margin-right: 0.11rem;
   border-radius: 50%;
   overflow: hidden;
   border: 2px var(--white);
@@ -323,16 +332,17 @@ hr {
 input[type="text"] {
   background-color: var(--white);
   display: block;
-  padding: 1rem 1.5rem 0.8rem;
+  padding: 1rem 1.7rem 0.8rem;
   line-height: 1.3;
-  font-size: 0.67rem;
-  height: 0.6rem;
-  border-radius: 40px;
+  font-size: 0.64rem;
+  height: 0.64rem;
+  border-radius: 48px;
   border: none;
   margin: auto;
   margin-top: 0.5rem;
+  margin-bottom: 0.1rem;
   color: var(--dd-violet);
-  width: 13.4rem;
+  width: 13.1rem;
   border-top: 1px solid rgb(255, 255, 255);
 }
 .input {
@@ -344,8 +354,9 @@ input[type="text"] {
 }
 input[type="text"]::placeholder {
   color: var(--gray-violet);
-  font-size: 0.63rem;
+  font-size: 0.641rem;
   line-height: 1.3;
+  letter-spacing: 0.2px;
 }
 button {
   border-radius: 50%;
@@ -353,11 +364,11 @@ button {
   color: var(--white);
   border: none;
   height: 60%;
-  width: 1.7rem;
+  width: 1.87rem;
   aspect-ratio: 1;
   overflow: hidden;
   text-align: center;
-  padding: 2px 4px 6px 7px;
+  padding: 5px 4px 6px 6px;
   position: absolute;
   right: 10.6%;
   top: 58%;
@@ -372,9 +383,17 @@ button {
   text-rendering: geometricPrecision;
   opacity: 0.98;
 }
-button:hover .greater-symbol {
+button:hover .greater-symbol,
+button:hover .greater-symbol::after {
   opacity: 0.8;
   cursor: pointer;
+}
+.greater-symbol::after {
+  content: ">";
+  cursor: pointer;
+  position: absolute;
+  transform: translateX(-100%) scaleY(1.1) scale(1.1) translateY(-3%);
+  opacity: 0.6;
 }
 .option {
   background-color: blueviolet;
@@ -467,16 +486,16 @@ button:hover .greater-symbol {
     );
     left: -10vw;
     top: -1px;
-    bottom: 11.5vh;
+    bottom: 12vh;
     right: 73.5vw;
-    border-radius: 0% 0% 47% 70%;
+    border-radius: 0% 0% 47% 68%;
   }
   .bg-shape-grey {
     position: absolute;
     background: var(--app-background);
     right: -9vw;
     bottom: -1px;
-    top: 11vh;
+    top: 12vh;
     left: 70.3vw;
     border-radius: 47% 60% 0% 0%;
   }
@@ -489,7 +508,7 @@ button:hover .greater-symbol {
     font-size: 12.4vw;
   }
   .screen {
-    transform: scale(0.98);
+    transform: scale(0.98) scaleX(0.99);
   }
 }
 
