--- a/index.css
+++ b/index.css
@@ -302,7 +302,7 @@ h1 {
   margin: 0.24rem;
   margin-left: 0.4rem;
 }
-.whiteChat {
+.white-chat {
   background-color: var(--white);
   color: hsla(271, 15%, 43%, 0.9);
   line-height: 1.3;
@@ -316,7 +316,7 @@ h1 {
   box-shadow: 1px 3px 7px hsla(206, 7%, 79%, 0.587);
   max-width: 8.7rem;
 }
-.whiteChat:nth-of-type(4) {
+.white-chat:nth-of-type(4) {
   margin-bottom: 1.26rem;
 }
 
@@ -334,7 +334,7 @@ input[type="text"] {
   display: block;
   padding: 1rem 1.7rem 0.8rem;
   line-height: 1.3;
-  font-size: 0.64rem;
+  font-size: 0.7rem;
   height: 0.64rem;
   border-radius: 48px;
   border: none;
@@ -342,8 +342,9 @@ input[type="text"] {
   margin-top: 0.5rem;
   margin-bottom: 0.1rem;
   color: var(--dd-violet);
-  width: 13.1rem;
+  width: 12.3rem;
   border-top: 1px solid rgb(255, 255, 255);
+  padding-right: 2.5rem;
 }
 .input {
   position: relative;
@@ -509,6 +510,154 @@ button:hover .greater-symbol::after {
   }
   .screen {
     transform: scale(0.98) scaleX(0.99);
+  }
+}
+
+/* chat animations */
+.received:nth-child(2) {
+  animation: receive-anim 0.1s linear 0.2s 1 backwards;
+  transition: all 0.4ms;
+}
+.received:nth-child(4) {
+  animation: receive-anim 0.1s linear 0.7s 1 backwards;
+  transition: all 0.4ms;
+}
+.sent:nth-of-type(4):nth-child(6) {
+  animation: send-anim 0.1s linear 1.7s 1 backwards;
+  transition: all 0.4ms;
+}
+.sent:nth-of-type(3) {
+  animation: send-anim 0.1s linear 2.2s 1 backwards;
+  transition: all 0.4ms;
+}
+.sent:nth-of-type(4) {
+  animation: send-anim 0.1s linear 2.7s 1 backwards;
+  transition: all 0.4ms;
+}
+.received:nth-of-type(5) {
+  animation: receive-anim 0.1s linear 3.7s 1 backwards;
+  transition: all 0.4ms;
+}
+.received:nth-child(13) {
+  animation: receive-anim 0.1s linear 4.2s 1 backwards;
+  transition: all 0.4ms;
+}
+.received:nth-child(14) {
+  animation: receive-anim 0.1s linear 4.8s 1 backwards;
+  transition: all 0.4ms;
+}
+
+@keyframes receive-anim {
+  from {
+    transform: translateX(-110%) scale(0.1);
+    display: none;
+  }
+}
+@keyframes send-anim {
+  from {
+    transform: translateX(110%) scale(0.1);
+    display: none;
+  }
+}
+
+.grey-chat:nth-of-type(1):nth-child(1) {
+  animation: show-typing 0.33s linear 1;
+  visibility: hidden;
+  position: absolute;
+  z-index: -9;
+  transform: translateX(-5%);
+  width: 4.6rem;
+  text-align: center;
+}
+.grey-chat:nth-of-type(2):nth-child(3) {
+  animation: show-typing 0.38s linear 0.45s 1;
+  visibility: hidden;
+  position: absolute;
+  z-index: -9;
+  transform: translateX(-7%);
+  width: 4.6rem;
+  text-align: center;
+}
+.grey-chat:nth-of-type(7) {
+  animation: show-typing 0.39s linear 3.4s 1;
+  visibility: hidden;
+  position: absolute;
+  z-index: -9;
+  transform: translateX(-9%);
+  text-align: center;
+  width: 4.6rem;
+}
+.white-chat {
+  --position-v: 0.3rem;
+}
+.white-chat:nth-of-type(3):nth-child(5) {
+  animation: show-typing 0.4s linear 1.4s 1;
+  position: absolute;
+  margin-top: 0.6rem;
+  right: 0rem;
+  text-align: center;
+  visibility: hidden;
+  opacity: 0.8;
+}
+.white-chat:nth-of-type(5):nth-child(7) {
+  animation: show-typing 0.4s linear 1.9s 1;
+  position: absolute;
+  right: 0rem;
+  text-align: center;
+  visibility: hidden;
+  opacity: 0.8;
+}
+.white-chat:nth-of-type(6) {
+  animation: show-typing 0.4s linear 2.3s 1;
+  position: absolute;
+  right: 0rem;
+  text-align: center;
+  visibility: hidden;
+  opacity: 0.8;
+}
+
+@keyframes show-typing {
+  to {
+    visibility: visible;
+    transform: translateX(0%);
+    right: var(--position-v);
+  }
+}
+/* typ-ani */
+.typing-dots {
+  margin-left: 0.1rem;
+  width: 4.6rem;
+}
+.typing {
+  display: inline-block;
+  width: 6.5px;
+  height: 6px;
+  margin-right: 5%;
+  border-radius: 49%;
+  opacity: 0;
+  transform: translateY(-110%);
+}
+.grey-chat .typing {
+  background: var(--mod-violet);
+}
+.white-chat .typing {
+  background: hsla(271, 15%, 43%, 0.9);
+}
+.typing.typing-1 {
+  animation: typing 1.45s infinite forwards;
+}
+.typing.typing-2 {
+  animation: typing 1.45s 0.2s infinite forwards;
+  margin-right: 5.5%;
+}
+.typing.typing-3 {
+  animation: typing 1.45s 0.5s infinite forwards;
+}
+
+@keyframes typing {
+  to {
+    transform: translateY(85%);
+    opacity: 0.6;
   }
 }
 
