--- a/index.css
+++ b/index.css
@@ -3,8 +3,8 @@
 /* Declaring Vars  */
 html:root {
   /* Break Points */
-  --mobile-break: 375px;
-  --desktop-break: 1440px;
+  /* --mobile-break: 375px;
+  --desktop-break: 1440px; */
   /* Text */
   --pale-violet: hsl(276, 100%, 81%);
   --mod-violet: hsl(276, 55%, 52%);
@@ -21,11 +21,13 @@ html:root {
   --submit-btn-bg: hsl(271, 36%, 24%);
   --r-btn-outline: hsl(289, 100%, 72%);
   --font-size: 16px;
+  --r-btn-outline-2: #f462ff;
+  /*   --css-script-1: ""; */
 }
 /* @import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap');
 Weights: 400, 500, 700 */
 
-/* CSS Reset and initializations*/
+/* CSS Resets and initializations*/
 html,
 body,
 div,
@@ -117,6 +119,8 @@ nav,
 section {
   display: block;
 }
+
+/* Mobile First Approach*/
 /* Body */
 html {
   font-size: var(--font-size);
@@ -139,6 +143,9 @@ body {
   transform: translateX(-75%) translateY(-48%);
   border-radius: 31%;
 } */
+/* .main-container {
+  filter: blur(0.5px);
+} */
 .bg-shape-violet {
   position: absolute;
   background: linear-gradient(to top, var(--violet) 28%, var(--magenta));
@@ -150,7 +157,7 @@ body {
 }
 
 .bg-shape-grey {
-  position: fixed;
+  position: absolute;
   background: var(--app-background);
   left: 50vw;
   top: 60vh;
@@ -192,13 +199,15 @@ h1 {
 .screen {
   width: 17.6rem;
   background-color: var(--app-background);
-  border-radius: 39px;
+  border-radius: 38.1px;
   border: 13px solid var(--white);
+  border-left: 12px solid var(--white);
+  border-right: 12px solid var(--white);
   overflow: hidden;
   position: relative;
   box-shadow: 0.4rem 2rem 2.5rem hsla(207, 7%, 74%, 0.693);
   margin: 5.1rem auto 0 auto;
-  transform: scaleX(0.97);
+  transform: scale(0.98) scaleX(0.99);
 }
 .screen-top {
   position: absolute;
@@ -217,8 +226,8 @@ h1 {
   display: flex;
   flex-direction: row;
   align-items: center;
-  padding: 36px 16px 14px 18px;
-  border-radius: 25px 25px 6px 6px;
+  padding: 35.8px 16px 14px 18px;
+  border-radius: 24px 24px 6px 6px;
   margin-bottom: 0.9rem;
   gap: 7px;
   box-shadow: 0px 4px 12px hsla(206, 7%, 79%, 0.861);
@@ -270,7 +279,7 @@ h1 {
   border: 2px var(--white);
   width: 1.7rem;
   height: 1.7rem;
-  aspect-ratio: 1;
+  /* aspect-ratio: 1; */
   border: 1px solid var(--white);
 }
 .avatar img {
@@ -278,16 +287,22 @@ h1 {
   width: 100%;
   height: auto;
 }
-.grey-chat {
-  background-color: rgba(201, 107, 255, 0.134);
-  color: var(--mod-violet);
+.grey-chat,
+.white-chat {
   line-height: 1.3;
   font-size: 0.63rem;
   padding: 0.5rem 0.6rem;
-  border-radius: 10px 10px 10px 4px;
+  max-width: 8.7rem;
+}
+
+.grey-chat {
+  background-color: rgba(201, 107, 255, 0.134);
+  color: var(--mod-violet);
+  border-radius: 12px 12px 12px 4px;
   margin: 0.6rem;
   margin-right: auto;
   width: 8.7rem;
+  /* box-shadow: 1px 3px 7px hsla(206, 7%, 79%, 0.1); */
 }
 .photos {
   margin-left: auto;
@@ -305,16 +320,12 @@ h1 {
 .white-chat {
   background-color: var(--white);
   color: hsla(271, 15%, 43%, 0.9);
-  line-height: 1.3;
-  font-size: 0.63rem;
-  padding: 0.5rem 0.6rem;
   width: fit-content;
   margin: 0.6rem;
   margin-top: 0.2rem;
   margin-left: auto;
-  border-radius: 10px 10px 4px 10px;
-  box-shadow: 1px 3px 7px hsla(206, 7%, 79%, 0.587);
-  max-width: 8.7rem;
+  border-radius: 12px 12px 4px 12px;
+  box-shadow: 1px 3px 7px hsla(206, 7%, 79%, 0.5);
 }
 .white-chat:nth-of-type(4) {
   margin-bottom: 1.26rem;
@@ -335,7 +346,7 @@ input[type="text"] {
   padding: 1rem 1.7rem 0.8rem;
   line-height: 1.3;
   font-size: 0.7rem;
-  height: 0.64rem;
+  height: 0.68rem;
   border-radius: 48px;
   border: none;
   margin: auto;
@@ -355,7 +366,7 @@ input[type="text"] {
 }
 input[type="text"]::placeholder {
   color: var(--gray-violet);
-  font-size: 0.641rem;
+  font-size: 0.645rem;
   line-height: 1.3;
   letter-spacing: 0.2px;
 }
@@ -364,15 +375,14 @@ button {
   background-color: var(--ddd-violet);
   color: var(--white);
   border: none;
-  height: 60%;
-  width: 1.87rem;
-  aspect-ratio: 1;
+  height: 1.85rem;
+  width: 1.85rem;
   overflow: hidden;
   text-align: center;
-  padding: 5px 4px 6px 6px;
+  padding: 4px 4px 6px 6px;
   position: absolute;
   right: 10.6%;
-  top: 58%;
+  top: 55%;
   transform: translateX(50%) translateY(-50%);
 }
 .greater-symbol {
@@ -384,8 +394,8 @@ button {
   text-rendering: geometricPrecision;
   opacity: 0.98;
 }
-button:hover .greater-symbol,
-button:hover .greater-symbol::after {
+button:active .greater-symbol,
+button:active .greater-symbol::after {
   opacity: 0.8;
   cursor: pointer;
 }
@@ -397,7 +407,8 @@ button:hover .greater-symbol::after {
   opacity: 0.6;
 }
 .option {
-  background-color: blueviolet;
+  background-color: var(--magenta);
+  background-image: linear-gradient(to right, var(--magenta), var(--violet));
   border-radius: 20px;
   margin: 0.6rem auto 0.6rem 0.6rem;
   width: max-content;
@@ -406,24 +417,42 @@ button:hover .greater-symbol::after {
   color: var(--white);
   padding: 10px 21px 9px 6px;
   line-height: 1.4;
-  background-image: linear-gradient(to right, var(--magenta), var(--violet));
   gap: 8px;
-  min-width: 10.4rem;
+  min-width: 10.6rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 .option > label {
   margin-right: auto;
-}
-.option > input[type="radio"] {
-  opacity: 0.2;
-  filter: hue-rotate(50deg) contrast(20%) brightness(1.5);
-  fill-opacity: var(--magenta);
   position: relative;
 }
+.option > input[type="radio"] {
+  opacity: 0.01;
+  filter: hue-rotate(70deg) contrast(80%) brightness(1.2);
+  fill-opacity: var(--magenta);
+  position: relative;
+  transform: scale(1.5) translateY(-2px);
+}
+.option > label::before {
+  border: 2px solid var(--r-btn-outline);
+  border-radius: 50%;
+  content: "";
+  left: -25px;
+  bottom: 1px;
+  width: 11px;
+  height: 11px;
+  position: absolute;
+  opacity: 0.9;
+  box-shadow: 0px 0px 1px #d444f5;
+}
+
+input[type="radio"]:checked + label::before {
+  background: radial-gradient(#fff 58%, var(--r-btn-outline-2));
+}
+
 .option > p {
-  font-size: 0.869rem;
+  font-size: 0.886rem;
   font-weight: 700;
   color: var(--white);
 }
@@ -489,7 +518,7 @@ button:hover .greater-symbol::after {
     top: -1px;
     bottom: 12vh;
     right: 73.5vw;
-    border-radius: 0% 0% 47% 68%;
+    border-radius: 0% 0% 47% 67.6%;
   }
   .bg-shape-grey {
     position: absolute;
@@ -623,7 +652,7 @@ button:hover .greater-symbol::after {
     right: var(--position-v);
   }
 }
-/* typ-ani */
+/* typing-ani */
 .typing-dots {
   margin-left: 0.1rem;
   width: 4.6rem;
@@ -663,7 +692,7 @@ button:hover .greater-symbol::after {
 
 /* Attribution Styling */
 .attribution {
-  font-size: 12px;
+  font-size: 14px;
   text-align: center;
   margin: 24px;
 }
