--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 /* Rami Al-Saadi's solution to Frontend Coding Challenge:
- Chat app CSS illustration - Stylesheet */
+ Chat app CSS illustration - Style Sheet */
 /* Declaring Vars  */
 html:root {
   /* Break Points */
@@ -168,7 +168,7 @@ body {
   right: 0%;
   left: 0%;
   min-height: 100vh;
-  z-index: -9;
+  z-index: -8;
   overflow: hidden;
 }
 .main-container {
@@ -443,6 +443,7 @@ button:active .greater-symbol::after {
   position: absolute;
   opacity: 0.9;
   box-shadow: 0px 0px 1px #d444f5;
+  pointer-events: none;
 }
 
 input[type="radio"]:checked + label::before {
